[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/sprites/Player/Shoot/Energy_Ball/EnergyBall.png_1.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/Player/Shoot/Energy_Ball/EnergyBall.png_4.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/Player/Shoot/Energy_Ball/EnergyBall.png_6.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/Player/Shoot/Energy_Ball/EnergyBall.png_9.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/Player/Shoot/Energy_Ball/EnergyBall.png_3.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/Player/Shoot/Energy_Ball/EnergyBall.png_8.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/Player/Shoot/Energy_Ball/EnergyBall.png_7.png" type="Texture" id=7]
[ext_resource path="res://assets/sprites/Player/Shoot/Energy_Ball/EnergyBall.png_2.png" type="Texture" id=8]
[ext_resource path="res://assets/sprites/Player/Shoot/Energy_Ball/EnergyBall.png_5.png" type="Texture" id=9]
[ext_resource path="res://EnergyBall.gd" type="Script" id=11]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 8 ), ExtResource( 5 ), ExtResource( 2 ), ExtResource( 9 ), ExtResource( 3 ), ExtResource( 7 ), ExtResource( 6 ), ExtResource( 4 ), ExtResource( 1 ), ExtResource( 8 ), ExtResource( 5 ), ExtResource( 2 ), ExtResource( 9 ), ExtResource( 3 ), ExtResource( 7 ), ExtResource( 6 ), ExtResource( 4 ), ExtResource( 3 ) ],
"loop": true,
"name": "Energy_Ball",
"speed": 9.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 3.0
height = 1.99982

[sub_resource type="CapsuleShape2D" id=3]
radius = 1.94205
height = 4.11578

[node name="EnergyBall" type="Area2D"]
position = Vector2( 192, 128 )
collision_layer = 0
collision_mask = 4
script = ExtResource( 11 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.20166, 0.14394 )
frames = SubResource( 1 )
animation = "Energy_Ball"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, 0 )
rotation = 1.57725
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16578

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
rotation = 1.57659
shape = SubResource( 3 )

[connection signal="body_entered" from="." to="." method="_on_EnergyBall_body_entered"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
